fix: Make NeuroBagel widget button always visible
The button was hidden inside a container with display:none.
Now the outer container is visible and the content toggles on/off.

--- a/static/neurobagel_widget.html
+++ b/static/neurobagel_widget.html
@@ -1,5 +1,5 @@
 <!-- NeuroBagel Annotation Widget -->
-<div id="neurobagelAnnotationWidget" style="display: none;">
+<div id="neurobagelAnnotationWidget">
   <style>
     .neurobagel-widget {
       display: flex;
@@ -213,7 +213,7 @@
     </button>
   </div>
 
-  <div class="neurobagel-widget" id="neurobagelWidgetContent">
+  <div class="neurobagel-widget" id="neurobagelWidgetContent" style="display: none;">
     <!-- Sidebar -->
     <div class="nb-sidebar">
       <div class="nb-section-title">Standardized Variables</div>
